--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "babel-node": "^0.0.1-security"
+  },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
   }
 }
